Spacing fix.

--- a/src/scss/user/_user.scss
+++ b/src/scss/user/_user.scss
@@ -26,10 +26,15 @@
 
 //Container width 1380
 .container {
-    max-width: 1380px !important;
+    max-width: 1280px !important;
     margin: auto;
     padding-left: 30px;
     padding-right: 30px;
+
+    @media screen and (max-width: 800px) {
+        padding-left: 15px;
+        padding-right: 15px;
+    }
 }
 
 //Color fixes from WP
